--- a/index.html
+++ b/index.html
@@ -10,50 +10,50 @@
 <body>
 <div class="naat-template"></div>
 <div class="middle">
-    <div class="container">
-        <div class="col-lg-3">
+    <div class="container text-center">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+            <div class="naat-boxes ">
+                <span></span>
+                <h4>Name</h4>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="naat-boxes">
                 <span></span>
                 <h4>Name</h4>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="naat-boxes">
                 <span></span>
                 <h4>Name</h4>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="naat-boxes">
                 <span></span>
                 <h4>Name</h4>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="naat-boxes">
                 <span></span>
                 <h4>Name</h4>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="naat-boxes">
                 <span></span>
                 <h4>Name</h4>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="naat-boxes">
                 <span></span>
                 <h4>Name</h4>
             </div>
         </div>
-        <div class="col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
-        </div>
-        <div class="col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="naat-boxes">
                 <span></span>
                 <h4>Name</h4>
@@ -62,8 +62,8 @@
         <button class="btn">Load More</button>
     </div>
 </div>
-<footer>
-
+<footer class="text-center">
+<p>© 2014 - AppBakerZ Pvt.Ltd AppBakerZ Pvt.Ltd</p>
 </footer>
 <script src="javascript/jquery.min.js"></script>
 <script src="javascript/bootstrap.min.js"></script>
