--- a/NAAT-KHUWAN-NAME.html
+++ b/NAAT-KHUWAN-NAME.html
@@ -15,11 +15,11 @@
         <h1 class="text-center">NAAT KHUWAN NAME</h1>
         <div class="name-box text-center">
             <ul>
-                <li>Naat Name</li>
-                <li>Naat Name</li>
-                <li>Naat Name</li>
-                <li>Naat Name</li>
-                <li>Naat Name</li>
+                <li><a href="javascript:">امام بوصیری</a></li>
+                <li><a href="javascript:">امیر خسرو</a></li>
+                <li><a href="javascript:">ریاض الد ین سہروردی</a></li>
+                <li><a href="javascript:">پير مہر علی شاہ</a></li>
+                <li><a href="javascript:">عامر بن اکوع</a></li>
             </ul>
         </div>
     </div>
