--- a/index.html
+++ b/index.html
@@ -6,66 +6,85 @@
     <link rel="stylesheet" href="SCSS/main.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/mdb.min.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lateef" rel="stylesheet">
 </head>
 <body>
 <div class="naat-template"></div>
 <div class="middle">
     <div class="container text-center">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes ">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes ">
+                    <span></span>
+                    <h4>امام بوصیری</h4>
+                </div>
+            </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes">
+                    <span></span>
+                    <h4>امیر خسرو</h4>
+                </div>
+            </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes">
+                    <span></span>
+                    <h4>ریاض الد ین سہروردی</h4>
+                </div>
+            </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes">
+                    <span></span>
+                    <h4>پير مہر علی شاہ</h4>
+                </div>
+            </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes">
+                    <span></span>
+                    <h4>عامر بن اکوع</h4>
+                </div>
+            </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes">
+                    <span></span>
+                    <h4>احمد رضا خان</h4>
+                </div>
+            </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes">
+                    <span></span>
+                    <h4>الطاف حسین حالی</h4>
+                </div>
+            </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="naat-boxes">
-                <span></span>
-                <h4>Name</h4>
-            </div>
+            <a href="NAAT-KHUWAN-NAME.html">
+                <div class="naat-boxes">
+                    <span></span>
+                    <h4>اسود بن سریع</h4>
+                </div>
+            </a>
         </div>
-        <button class="btn">Load More</button>
+        <button class="btn waves-light waves-effect">Load More</button>
     </div>
 </div>
 <footer class="text-center">
-<p>© 2014 - AppBakerZ Pvt.Ltd AppBakerZ Pvt.Ltd</p>
+    <p>© 2014 - AppBakerZ Pvt.Ltd AppBakerZ Pvt.Ltd</p>
 </footer>
 <script src="javascript/jquery.min.js"></script>
 <script src="javascript/bootstrap.min.js"></script>
+<script src="javascript/mdb.min.js"></script>
 </body>
 </html>
