--- a/NAAT-KHUWAN-NAME.html
+++ b/NAAT-KHUWAN-NAME.html
@@ -12,14 +12,14 @@
 <div class="naat-template"></div>
 <div class="middle">
     <div class="container">
-        <h1 class="text-center">NAAT KHUWAN NAME</h1>
-        <div class="name-box text-center">
+        <h1 class="text-center">شاعر</h1>
+        <div class="name-box">
             <ul>
-                <li><a href="javascript:">امام بوصیری</a></li>
-                <li><a href="javascript:">امیر خسرو</a></li>
-                <li><a href="javascript:">ریاض الد ین سہروردی</a></li>
-                <li><a href="javascript:">پير مہر علی شاہ</a></li>
-                <li><a href="javascript:">عامر بن اکوع</a></li>
+                <li><a href="qasiday.html">امام بوصیری</a></li>
+                <li><a href="qasiday.html">امیر خسرو</a></li>
+                <li><a href="qasiday.html">ریاض الد ین سہروردی</a></li>
+                <li><a href="qasiday.html">پير مہر علی شاہ</a></li>
+                <li><a href="qasiday.html">عامر بن اکوع</a></li>
             </ul>
         </div>
     </div>
