--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
             </a>
         </div>
-        <button class="btn waves-light waves-effect">Load More</button>
+        <button class="btn waves-light waves-effect">مزید دیکہیں</button>
     </div>
 </div>
 <footer class="text-center">
