--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="SCSS/main.css"/>
+    <link rel="stylesheet" href="sass/main.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/mdb.min.css"/>
@@ -14,7 +14,7 @@
 <div class="middle">
     <div class="container text-center">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes ">
                     <span></span>
                     <h4>امام بوصیری</h4>
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
                     <span></span>
                     <h4>امیر خسرو</h4>
@@ -30,7 +30,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
                     <span></span>
                     <h4>ریاض الد ین سہروردی</h4>
@@ -38,7 +38,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
                     <span></span>
                     <h4>پير مہر علی شاہ</h4>
@@ -46,7 +46,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
                     <span></span>
                     <h4>عامر بن اکوع</h4>
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
                     <span></span>
                     <h4>احمد رضا خان</h4>
@@ -62,7 +62,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
                     <span></span>
                     <h4>الطاف حسین حالی</h4>
@@ -70,7 +70,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="NAAT-KHUWAN-NAME.html">
+            <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
                     <span></span>
                     <h4>اسود بن سریع</h4>
