--- a/qasiday.html
+++ b/qasiday.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="SCSS/main.css"/>
+    <link rel="stylesheet" href="sass/main.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/mdb.min.css"/>
