--- a/NAAT-KHUWAN-NAME.html
+++ b/NAAT-KHUWAN-NAME.html
@@ -9,17 +9,18 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
 </head>
 <body>
-<div class="naat-template"></div>
+<!--<div class="naat-template"></div>-->
+<img src="images/naat-template.png" style="width: 100%" height="auto" />
 <div class="middle">
     <div class="container">
-        <h1 class="text-center">شاعر</h1>
+        <h1 class="text-center">نعت</h1>
         <div class="name-box">
             <ul>
-                <li><a href="qasiday.html">امام بوصیری</a></li>
-                <li><a href="qasiday.html">امیر خسرو</a></li>
-                <li><a href="qasiday.html">ریاض الد ین سہروردی</a></li>
-                <li><a href="qasiday.html">پير مہر علی شاہ</a></li>
-                <li><a href="qasiday.html">عامر بن اکوع</a></li>
+                <li><a href="qasiday.html">قصیدہ بردہ شریف</a></li>
+                <li><a href="qasiday.html">اردو میں دوہے</a></li>
+                <li><a href="qasiday.html">تالیفات</a></li>
+                <li><a href="qasiday.html">سیفِ چشتیائی</a></li>
+                <li><a href="qasiday.html"> سکینۃ علینا افا اذا میح</a></li>
             </ul>
         </div>
     </div>
