--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lateef" rel="stylesheet">
 </head>
 <body>
-<div class="naat-template"></div>
+<!--<div class="naat-template"></div>-->
+<img src="images/naat-template.png" style="width: 100%" height="auto" />
 <div class="middle">
     <div class="container text-center">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
@@ -77,7 +78,7 @@
                 </div>
             </a>
         </div>
-        <button class="btn waves-light waves-effect">مزید دیکہیں</button>
+        <button class="btn waves-light waves-effect">مزید دیکھیں</button>
     </div>
 </div>
 <footer class="text-center">
