--- a/qasiday.html
+++ b/qasiday.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lateef" rel="stylesheet">
 </head>
 <body>
-<div class="naat-template"></div>
+<!--<div class="naat-template"></div>-->
+<img src="images/naat-template.png" style="width: 100%" height="auto" />
 <div class="middle">
     <div class="container text-center">
         <h1>اشتقنالك .. والهوى نادانا</h1>
