resolve responsive problems

--- a/NAAT-KHUWAN-NAME.html
+++ b/NAAT-KHUWAN-NAME.html
@@ -10,7 +10,7 @@
 <body>
 <!--<div class="naat-template"></div>-->
 <img src="images/naat-template.png" style="width: 100%" height="auto" />
-<div class="middle">
+<div class="middle naat-khuwan">
     <div class="container">
         <h1 class="text-center">نعت</h1>
         <div class="name-box">
