--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/mdb.min.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Lateef" rel="stylesheet">
 </head>
 <body>
 <!--<div class="naat-template"></div>-->
@@ -17,7 +16,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes ">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>امام بوصیری</h4>
                 </div>
             </a>
@@ -25,7 +24,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>امیر خسرو</h4>
                 </div>
             </a>
@@ -33,7 +32,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>ریاض الد ین سہروردی</h4>
                 </div>
             </a>
@@ -41,7 +40,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>پير مہر علی شاہ</h4>
                 </div>
             </a>
@@ -49,7 +48,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>عامر بن اکوع</h4>
                 </div>
             </a>
@@ -57,7 +56,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>احمد رضا خان</h4>
                 </div>
             </a>
@@ -65,7 +64,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>الطاف حسین حالی</h4>
                 </div>
             </a>
@@ -73,7 +72,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="naat-khuwan-name.html">
                 <div class="naat-boxes">
-                    <span></span>
+                    <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>اسود بن سریع</h4>
                 </div>
             </a>
