--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="middle">
     <div class="container text-center">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes ">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>امام بوصیری</h4>
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>امیر خسرو</h4>
@@ -30,7 +30,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>ریاض الد ین سہروردی</h4>
@@ -38,7 +38,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>پير مہر علی شاہ</h4>
@@ -46,7 +46,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>عامر بن اکوع</h4>
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>احمد رضا خان</h4>
@@ -62,7 +62,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>الطاف حسین حالی</h4>
@@ -70,7 +70,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <a href="naat-khuwan-name.html">
+            <a href="nashid.html">
                 <div class="naat-boxes">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>اسود بن سریع</h4>
