--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--<div class="naat-template"></div>-->
-<img src="images/naat-template.png" style="width: 100%" height="auto" />
+<img src="images/naat-template.png" style="width: 100%; margin-bottom: 70px" height="auto" />
 <div class="middle">
     <div class="container text-center">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
