--- a/nashid.html
+++ b/nashid.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!--<div class="naat-template"></div>-->
-<img src="images/naat-template.png" style="width: 100%" height="auto" />
+<img src="images/naat-template.png" style="width: 100%; margin-bottom: 70px" height="auto" />
 <div class="middle naat-khuwan">
     <div class="container">
         <h1 class="text-center">نعت</h1>
