--- a/qasiday.html
+++ b/qasiday.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--<div class="naat-template"></div>-->
-<img src="images/naat-template.png" style="width: 100%" height="auto"/>
+<img src="images/naat-template.png" style="width: 100%; margin-bottom: 70px" height="auto"/>
 <div class="middle">
     <div class="container text-center">
         <h1>اشتقنالك .. والهوى نادانا</h1>
