--- a/nashid.html
+++ b/nashid.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <!--<div class="naat-template"></div>-->
-<img src="images/naat-template.png" style="width: 100%; margin-bottom: 70px" height="auto" />
+<img src="images/naat-template.png" style="width: 100%;" />
 <div class="middle naat-khuwan">
     <div class="container">
-        <h1 class="text-center">نعت</h1>
+        <h1 class="text-center">مدح رسول اللہ صلی اللہ علیہ وسلم</h1>
         <div class="name-box">
             <ul>
                 <li><a href="qasiday.html">قصیدہ بردہ شریف</a></li>
