--- a/nashid.html
+++ b/nashid.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
-<!--<div class="naat-template"></div>-->
-<img src="images/naat-template.png" style="width: 100%;" />
+<div class="naat-template">
+    <img src="images/naat-template.png"/>
+</div>
+
 <div class="middle naat-khuwan">
     <div class="container">
         <h1 class="text-center">مدح رسول اللہ صلی اللہ علیہ وسلم</h1>
@@ -27,7 +29,7 @@
 
 
 <footer class="text-center">
-    <p>© 2014 - AppBakerZ Pvt.Ltd AppBakerZ Pvt.Ltd</p>
+    <p>© 2017 - AppBakerZ Pvt.Ltd <a href="https://www.appbakerz.com/" target="_blank">AppBakerZ</a> Pvt.Ltd</p>
 </footer>
 <script src="javascript/jquery.min.js"></script>
 <script src="javascript/bootstrap.min.js"></script>
