--- a/qasiday.html
+++ b/qasiday.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="css/mdb.min.css"/>
 </head>
 <body>
-<!--<div class="naat-template"></div>-->
-<img src="images/naat-template.png" style="width: 100%;"/>
+<div class="naat-template">
+    <img src="images/naat-template.png"/>
+</div>
+
 <div class="middle">
     <div class="container text-center">
         <h1>اشتقنالك .. والهوى نادانا</h1>
@@ -50,7 +52,7 @@
     </div>
 </div>
 <footer class="text-center">
-    <p>© 2014 - AppBakerZ Pvt.Ltd AppBakerZ Pvt.Ltd</p>
+    <p>© 2017 - AppBakerZ Pvt.Ltd <a href="https://www.appbakerz.com/" target="_blank">AppBakerZ</a> Pvt.Ltd</p>
 </footer>
 <script src="javascript/jquery.min.js"></script>
 <script src="javascript/bootstrap.min.js"></script>
