--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="css/mdb.min.css"/>
 </head>
 <body>
-<!--<div class="naat-template"></div>-->
-<img src="images/naat-template.png" style="width: 100%; margin-bottom: 70px" height="auto" />
+<div class="naat-template">
+<img src="images/naat-template.png" />
+</div>
+<!--<div class="text-center">-->
+    <!--<span class="circle-line"><i class="circles"></i></span>-->
 <div class="middle">
     <div class="container text-center">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes ">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>امام بوصیری</h4>
                 </div>
@@ -23,7 +26,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>امیر خسرو</h4>
                 </div>
@@ -31,7 +34,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>ریاض الد ین سہروردی</h4>
                 </div>
@@ -39,7 +42,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>پير مہر علی شاہ</h4>
                 </div>
@@ -47,7 +50,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>عامر بن اکوع</h4>
                 </div>
@@ -55,7 +58,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>احمد رضا خان</h4>
                 </div>
@@ -63,7 +66,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>الطاف حسین حالی</h4>
                 </div>
@@ -71,7 +74,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <a href="nashid.html">
-                <div class="naat-boxes">
+                <div class="naat-boxe">
                     <span><img src="images/name-boxes-img.png" alt="" style="width: 100%; height: 100%;"/></span>
                     <h4>اسود بن سریع</h4>
                 </div>
@@ -81,7 +84,7 @@
     </div>
 </div>
 <footer class="text-center">
-    <p>© 2014 - AppBakerZ Pvt.Ltd AppBakerZ Pvt.Ltd</p>
+    <p>© 2017 - AppBakerZ Pvt.Ltd <a href="https://www.appbakerz.com/" target="_blank">AppBakerZ</a> Pvt.Ltd</p>
 </footer>
 <script src="javascript/jquery.min.js"></script>
 <script src="javascript/bootstrap.min.js"></script>
