--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 </div>
 <footer class="text-center">
-    <p>© 2017 - AppBakerZ Pvt.Ltd <a href="https://www.appbakerz.com/" target="_blank">AppBakerZ</a> Pvt.Ltd</p>
+    <p>© 2017 - AppBakerZ Pvt.Ltd <a href="https://www.appbakerz.com/" target="_blank">AppBakerZ Pvt.Ltd</a></p>
 </footer>
 <script src="javascript/jquery.min.js"></script>
 <script src="javascript/bootstrap.min.js"></script>
